--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<html>
-    <head>
-        <title> Stronka </title>
-    </head>
+<h1 id="main-page">Main Page</h1>
 
-    <body>
+<p>Programming languages are the bedrock of the digital realm, serving as the intricate code that empowers computers to execute tasks, process information, and bring software to life. These languages, each with its unique syntax and purpose, are the indispensable tools in the hands of developers, allowing them to communicate with machines and craft solutions to complex problems.</p>
 
-    </body>
-</html>
+<p><a href="ranking">Ranking page</a></p>
