--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<html>
-    <head>
-        <title> Stronka </title>
-    </head>
-
-    <body>
-
-    </body>
-</html>
+<header>
+    <h1> Powerful website</h1>
+    <h2> Less powerful but still powerful text</h2>
+</header>
